# mantis

./: .todo  Cargo.toml  README.md  example.ms  layout.ms  main.c  test.c
example/: main.ms
mantis/src/: ast.ms  elif.ms  generic.ms  if.ms  lamda.ms  loop.ms  macro.ms  main.ms  memory.ms  pointer.ms  struct.ms  vec.ms
mantis/src/std/: lib.ms
mantis_expression/: .todo  Cargo.toml  test.ms
mantis_expression/src/: grammer.pest  lib.rs  node.rs  pratt.rs
mantis_tokens/: Cargo.toml
mantis_tokens/src/: lib.rs
src/: main.rs  ms.rs  scope.rs
src/backend/: compile.rs  compile_function.rs  cranelift.rs  mod.rs
src/frontend/: compile.rs  compiler.rs  function.rs  mod.rs  tokenizer.rs  tokens.rs  variable.rs
src/lexer/: ast.rs  code_parser.rs  lexer.rs  mod.rs  node.rs  token_parser.rs  types.rs
src/libc/: libc.rs
src/native/: instructions.rs
src/registries/: compiler_functions.rs  functions.rs  mod.rs  modules.rs  structs.rs  types.rs  variable.rs
src/utils/: bi_directional_iterator.rs  mod.rs  rc_str.rs  rc_vec.rs
