[package]
name = "mantis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = "4.5.1"
cranelift = "0.105.2"
cranelift-jit = "0.105.2"
cranelift-module = "0.105.2"
cranelift-native = "0.105.2"
cranelift-object = "0.105.2"
